#pragma once

class MiscConfig {
  public:
    int maxTurn = 0;
    int startingBalance = 0;
};
