#pragma once

#include <map>

class RailroadConfig {
  public:
    std::map<int, int> rentTable;
};
