#pragma once

class SpecialConfig {
  public:
    int goSalary = 0;
    int jailFine = 0;
};
