#pragma once

class TaxConfig {
  public:
    int pphFlat = 0;
    int pphPercent = 0;
    int pbmFlat = 0;
};
