#pragma once

#include <map>

class UtilityConfig {
  public:
    std::map<int, int> multiplierTable;
};
